# Student-Task-Hub

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.yml  package-lock.json  package.json  replit.md
attached_assets/: Pasted-Add-two-major-improvements-dedicated-Activities-tab-and_1770529502596.txt  Pasted-Complete-the-student-task-management-app-with-all-final_1770530041706.txt  Pasted-Create-a-mobile-first-student-task-management-app-calle_1770528190850.txt  Pasted-Great-start-Now-let-s-add-the-missing-features-and-comp_1770528612317.txt  Pasted-Here-s-the-final-polishing-prompt-to-send-to-Replit-REP_1770531177591.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: AddActivityModal.tsx  AddAssignmentModal.tsx  BottomNav.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  GenerateScheduleModal.tsx  NotificationsDropdown.tsx  OfflineBanner.tsx  PremiumModal.tsx  SyncIndicator.tsx  TaskCard.tsx  TaskDetailModal.tsx
client/src/hooks/: use-activities.ts  use-assignments.ts  use-courses.ts  use-notifications.ts  use-preferences.ts  use-recommendations.ts
client/src/pages/: Activities.tsx  AllTasks.tsx  Analytics.tsx  Landing.tsx  Login.tsx  Onboarding.tsx  Pair.tsx  Schedule.tsx  Settings.tsx  Signup.tsx  Today.tsx  Week.tsx
companion/: DEV.md  pyproject.toml
companion/prompts/: brightspace_skill.md
companion/scripts/: start_scan.sh
companion/src/sth_companion/: backend.py  config.py  main.py  scan.py  server.py  state.py
script/: dev-up.sh
server/: routes.ts  storage.ts
shared/: routes.ts  schema.ts
(+2 files in other folders)
